--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 
 # node_modules
 /Backend/node_modules
+FrontEnd/node_modules
 
 # misc
 .DS_Store
@@ -21,7 +22,7 @@
 .idea
 
 # yarn
-/FrontEnd/yarn.lock
+FrontEnd/yarn.lock
 
 npm-debug.log*
 yarn-debug.log*
