--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -8,6 +8,7 @@
     "babel-preset-react": "^6.24.1",
     "jquery": "^3.2.1",
     "react": "^16.0.0",
+    "react-datepicker": "^0.55.0",
     "react-dom": "^16.0.0",
     "react-scripts": "1.0.14",
     "webpack": "^3.7.1"
