--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -7,6 +7,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-react": "^6.24.1",
     "jquery": "^3.2.1",
+    "moment": "^2.19.1",
     "react": "^16.0.0",
     "react-bootstrap": "^0.31.3",
     "react-datepicker": "^0.55.0",
