--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -13,7 +13,8 @@
     "react-datepicker": "^0.55.0",
     "react-dom": "^16.0.0",
     "react-scripts": "1.0.14",
-    "webpack": "^3.7.1"
+    "webpack": "^3.7.1",
+    "xmlhttprequest": "^1.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
